Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1289,6 +1289,16 @@
                                 <td>刘畅</td>
                                 <td>¥5</td>
                             </tr>
+                            <tr>
+                                <td>libkernelpanic.so</td>
+                                <td>¥5.12</td>
+                                <td>长青</td>
+                                <td>¥3</td>
+                                <td>lu林</td>
+                                <td>¥10</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
