Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1296,8 +1296,18 @@
                                 <td>¥3</td>
                                 <td>lu林</td>
                                 <td>¥10</td>
-                                <td></td>
-                                <td></td>
+                                <td>梅士</td>
+                                <td>¥8</td>
+                            </tr>
+                            <tr>
+                                <td>Giraffe</td>
+                                <td>¥3.6</td>
+                                <td>丙祎</td>
+                                <td>¥5.21</td>
+                                <td>ytm</td>
+                                <td>¥5</td>
+                                <td>lbc1234</td>
+                                <td>¥5</td>
                             </tr>
                         </tbody>
                     </table>
