Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1312,8 +1312,8 @@
                             <tr>
                                 <td>流水</td>
                                 <td>¥5</td>
-                                <td></td>
-                                <td></td>
+                                <td>Cryz</td>
+                                <td>¥10.24</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
