Fix DevRocket link error

--- a/index.html
+++ b/index.html
@@ -3701,7 +3701,7 @@
                                     <tr>
                                         <td align="left">DevRocket</td>
                                         <td>切图神器</td>
-                                        <td align="center"><a href="http://www.robovm.org">下载</a>
+                                        <td align="center"><a href="http://devrocket.uiparade.com">下载</a>
                                         </td>
                                         <td align="center"></td>
                                     </tr>
