Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1319,6 +1319,16 @@
                                 <td>颜宇</td>
                                 <td>¥5</td>
                             </tr>
+                            <tr>
+                                <td>清夜煋寒</td>
+                                <td>¥5</td>
+                                <td>cztfree</td>
+                                <td>¥10</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
