Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1329,6 +1329,16 @@
                                 <td>末</td>
                                 <td>¥10</td>
                             </tr>
+                            <tr>
+                                <td>逆水行舟</td>
+                                <td>¥1.24</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
