Add Android Studio 2.1 and 2.1.1 Link

--- a/index.html
+++ b/index.html
@@ -251,6 +251,60 @@
                             </tr>
                         </thead>
                         <tbody>
+                                <!-- 2.1.1 正式版 -->
+                                <tr>
+                                  <td rowspan="4">2.1.1 正式版</td>
+                                    </tr>
+                                <tr>
+                                  <td >Windows</td>
+                                  <td align="left"><a href="http://pan.baidu.com/s/1i5O0q9J">android-studio-ide-143.2821654-windows.zip</a></td>
+                                  <td>286.7 MB</td>
+                                  <td>9bec4905e40f0ac16ac7fde63a50f3fbc1eec4d9</td>
+                                  <td rowspan="4"><a href="http://ww2.sinaimg.cn/large/8a41f469jw1f3v72k3ywaj20r00ditev.jpg">查看</a></td>
+                                </tr>
+                                <tr>
+                                  <td><nobr>Mac OS X</nobr></td>
+                                  <td align="left">
+                                            <a href="http://pan.baidu.com/s/1mi4Hxfq">android-studio-ide-143.2821654-mac.zip</a>
+                                  </td>
+                                  <td>285.2 MB</td>
+                                  <td>8555511f6832dc1c707590cb4469791ae1b3e5fa</td>
+                                </tr>
+                                <tr>
+                                  <td>Linux</td>
+                                  <td align="left">
+                                            <a href="http://pan.baidu.com/s/1eRUvN3O">android-studio-ide-143.2821654-linux.zip</a>
+                                  </td>
+                                  <td>284.3 MB</td>
+                                  <td>55d69ad2da0068d818718b26ba43550fbcbeb7e9</td>
+                                </tr>
+                                <!-- 2.1 正式版 -->
+                                <tr>
+                                  <td rowspan="4">2.1 正式版</td>
+                                    </tr>
+                                <tr>
+                                  <td >Windows</td>
+                                  <td align="left"><a href="http://pan.baidu.com/s/1nviuFSP">android-studio-ide-143.2790544-windows.zip</a></td>
+                                  <td>358 MB</td>
+                                  <td>9689ba415e5f09e2dcf5263ea302e7b1d98a8fc6</td>
+                                  <td rowspan="4"><a href="http://ww3.sinaimg.cn/large/8a41f469jw1f3v71k8vdkj20ri0g744u.jpg">查看</a></td>
+                                </tr>
+                                <tr>
+                                  <td><nobr>Mac OS X</nobr></td>
+                                  <td align="left">
+                                            <a href="http://pan.baidu.com/s/1kUKcoWf">android-studio-ide-143.2790544-mac.zip</a>
+                                  </td>
+                                  <td>279.5 MB</td>
+                                  <td>8d28fcf2a3b502d60922b8624bfcfa4990c2fee8</td>
+                                </tr>
+                                <tr>
+                                  <td>Linux</td>
+                                  <td align="left">
+                                            <a href="http://pan.baidu.com/s/1skHil8D">android-studio-ide-143.2790544-linux.zip</a>
+                                  </td>
+                                  <td>278.6 MB</td>
+                                  <td>45dad9b76ad0506c354483aaa67ea0e2468d03a5</td>
+                                </tr>
                             <!-- 2.0 正式版 -->
                             <tr>
                               <td rowspan="6">2.0 正式版</td>
@@ -302,7 +356,6 @@
                               <td>02431e373847a786353cc17372e534c38dae09b3</td>
                               <td rowspan="4"><a href="http://ww4.sinaimg.cn/large/8a41f469jw1f2om0ow1s2j21ec0w4akv.jpg">查看</a></td>
                             </tr>
-                            
                             <tr>
                               <td><nobr>Mac OS X</nobr></td>
                               <td align="left">
@@ -311,7 +364,6 @@
                               <td>296 MB</td>
                               <td>006e7c9851494dce450071c1439de7a131a9df4b</td>
                             </tr>
-                            
                             <tr>
                               <td>Linux</td>
                               <td align="left">
