update android studio 2.1.1 link

--- a/index.html
+++ b/index.html
@@ -253,29 +253,42 @@
                         <tbody>
                                 <!-- 2.1.1 正式版 -->
                                 <tr>
-                                  <td rowspan="4">2.1.1 正式版</td>
+                                  <td rowspan="6">2.1.1 正式版</td>
                                     </tr>
                                 <tr>
-                                  <td >Windows</td>
-                                  <td align="left"><a href="http://pan.baidu.com/s/1i5O0q9J">android-studio-ide-143.2821654-windows.zip</a></td>
-                                  <td>286.7 MB</td>
-                                  <td>9bec4905e40f0ac16ac7fde63a50f3fbc1eec4d9</td>
-                                  <td rowspan="4"><a href="http://ww2.sinaimg.cn/large/8a41f469jw1f3v72k3ywaj20r00ditev.jpg">查看</a></td>
+                                  <td rowspan="3">Windows</td>
+                                  <td align="left">
+                                        <a href="http://pan.baidu.com/s/1i5O0q9J">android-studio-bundle-143.2821654-windows.exe</a><br>(推荐)
+                                  </td>
+                                  <td>1181 MB</td>
+                                  <td>6f7fcdc30800bd8b3fbd5a14c2b9857243144650</td>
+                                  <td rowspan="6"><a href="http://ww1.sinaimg.cn/large/8a41f469gw1f3wqzmk9nqj20sp0gwwhr.jpg">查看</a></td>
                                 </tr>
                                 <tr>
-                                  <td><nobr>Mac OS X</nobr></td>
-                                  <td align="left">
-                                            <a href="http://pan.baidu.com/s/1mi4Hxfq">android-studio-ide-143.2821654-mac.zip</a>
+                                  <td align="left"><a href="http://pan.baidu.com/s/1i5O0q9J">android-studio-ide-143.2821654-windows.exe</a><br>(不含SDK Tools)
                                   </td>
-                                  <td>285.2 MB</td>
-                                  <td>8555511f6832dc1c707590cb4469791ae1b3e5fa</td>
+                                  <td>270 MB</td>
+                                  <td>d8cb3968814b6155f4effe727baf23b18b9f8360</td>
+                                </tr>
+                                <tr>
+                                  <td align="left"><a href="http://pan.baidu.com/s/1i5O0q9J">android-studio-ide-143.2821654-windows.zip</a></td>
+                                  <td>286 MB</td>
+                                  <td>9bec4905e40f0ac16ac7fde63a50f3fbc1eec4d9</td>
+                                </tr>
+                                <tr>
+                                  <td ><nobr>Mac OS X</nobr></td>
+                                  <td align="left">
+                                        <a href="http://pan.baidu.com/s/1mi4Hxfq">android-studio-ide-143.2821654-mac.dmg</a>
+                                  </td>
+                                  <td>284 MB</td>
+                                  <td>4a7ca7532a95c65ee59ed50193c0e976f0272472</td>
                                 </tr>
                                 <tr>
                                   <td>Linux</td>
                                   <td align="left">
                                             <a href="http://pan.baidu.com/s/1eRUvN3O">android-studio-ide-143.2821654-linux.zip</a>
                                   </td>
-                                  <td>284.3 MB</td>
+                                  <td>284 MB</td>
                                   <td>55d69ad2da0068d818718b26ba43550fbcbeb7e9</td>
                                 </tr>
                                 <!-- 2.1 正式版 -->
