Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1334,10 +1334,10 @@
                                 <td>¥1.24</td>
                                 <td>岁寒</td>
                                 <td>¥5</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>叶杰</td>
+                                <td>¥1.8</td>
+                                <td>张西向</td>
+                                <td>¥5</td>
                             </tr>
                         </tbody>
                     </table>
