Add android studio 2.2 preivew1 link

--- a/index.html
+++ b/index.html
@@ -251,6 +251,33 @@
                             </tr>
                         </thead>
                         <tbody>
+                                <!-- 2.2 Preview1 -->
+                                <tr>
+                                  <td rowspan="4">2.2 Preview1</td>
+                                    </tr>
+                                <tr>
+                                  <td >Windows</td>
+                                  <td align="left"><a href="http://pan.baidu.com/s/1miwAhyK">android-studio-ide-145.2878421-windows.zip</a></td>
+                                  <td>426.8 MB</td>
+                                  <td>d7d4f1d5c475af7e00c029a73a75ccbf18f7b3d0</td>
+                                  <td rowspan="4"><a href="http://ww1.sinaimg.cn/large/8a41f469gw1f41pqopbbij20sc0lggsw.jpg">查看</a></td>
+                                </tr>
+                                <tr>
+                                  <td><nobr>Mac OS X</nobr></td>
+                                  <td align="left">
+                                            <a href="http://pan.baidu.com/s/1nuJs1Ot">android-studio-ide-145.2878421-mac.zip</a>
+                                  </td>
+                                  <td>426.9 MB</td>
+                                  <td>6bb5d556d61b455584a708b5e401fae2cb5fdb4f</td>
+                                </tr>
+                                <tr>
+                                  <td>Linux</td>
+                                  <td align="left">
+                                            <a href="http://pan.baidu.com/s/1hsLKKEK">android-studio-ide-145.2878421-linux.zip</a>
+                                  </td>
+                                  <td>426.4 MB</td>
+                                  <td>f1320e6adbc7206f07e9df6bed577dbbd4299752</td>
+                                </tr>
                                 <!-- 2.1.1 正式版 -->
                                 <tr>
                                   <td rowspan="6">2.1.1 正式版</td>
