--- a/donate.html
+++ b/donate.html
@@ -1349,6 +1349,16 @@
                                 <td>张西向</td>
                                 <td>¥5</td>
                             </tr>
+                            <tr>
+                                <td>爱抽的果</td>
+                                <td>¥10.24</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
