Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1352,8 +1352,8 @@
                             <tr>
                                 <td>爱抽的果</td>
                                 <td>¥10.24</td>
-                                <td></td>
-                                <td></td>
+                                <td>Sure</td>
+                                <td>¥10.24</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
