Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1350,12 +1350,12 @@
                                 <td>¥5</td>
                             </tr>
                             <tr>
-                                <td>爱抽的果</td>
+                                <td>爱抽的果达</td>
                                 <td>¥10.24</td>
                                 <td>Sure</td>
                                 <td>¥10.24</td>
-                                <td></td>
-                                <td></td>
+                                <td>自由港</td>
+                                <td>¥10</td>
                                 <td></td>
                                 <td></td>
                             </tr>
