Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1356,8 +1356,8 @@
                                 <td>¥10.24</td>
                                 <td>自由港</td>
                                 <td>¥10</td>
-                                <td></td>
-                                <td></td>
+                                <td>Geek</td>
+                                <td>¥5.2</td>
                             </tr>
                         </tbody>
                     </table>
