Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1357,7 +1357,17 @@
                                 <td>自由港</td>
                                 <td>¥10</td>
                                 <td>Geek</td>
-                                <td>¥5.2</td>
+                                <td>¥5.20</td>
+                            </tr>
+                            <tr>
+                                <td>24K_男</td>
+                                <td>¥5.20</td>
+                                <td>浪q拜</td>
+                                <td>¥10</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                             </tr>
                         </tbody>
                     </table>
