--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
     </header>
     <div id="ad_right_float" style="z-index: 10; right: 0px; position: absolute; top: 340px;">
-		<a href="http://j.jikexueyuan.com/train/android?hmsr=andtool_jiuye_banner_android_03.07" title="如果你曾经或者正在学习这个课程，欢迎大家在评论框给我留言，反馈这个课程的学习情况" onclick="trackOutboundLink('http://j.jikexueyuan.com/train/android?hmsr=andtool_jiuye_banner_android_03.07', 'AD', 'click');" >
+		<a href="http://e.jikexueyuan.com/android.html?hmsr=andtool_banner_android_05.24" title="如果你曾经或者正在学习这个课程，欢迎大家在评论框给我留言，反馈这个课程的学习情况" onclick="trackOutboundLink('http://e.jikexueyuan.com/android.html?hmsr=andtool_banner_android_05.24', 'AD', 'click');" >
 			<img src='http://ww3.sinaimg.cn/large/8a41f469gw1f1oi91uju3j204605k74k.jpg'/>
 		</a>
 	</div>
