Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1364,8 +1364,18 @@
                                 <td>¥5.20</td>
                                 <td>浪q拜</td>
                                 <td>¥10</td>
-                                <td></td>
-                                <td></td>
+                                <td>luck_楽</td>
+                                <td>¥0.5</td>
+                                <td>浪</td>
+                                <td>¥1</td>
+                            </tr>
+                            <tr>
+                                <td>Mumu</td>
+                                <td>¥8</td>
+                                <td>jiajia</td>
+                                <td>¥10</td>
+                                <td>简约蚂蚁</td>
+                                <td>¥0.1</td>
                                 <td></td>
                                 <td></td>
                             </tr>
