--- a/donate.html
+++ b/donate.html
@@ -1370,12 +1370,22 @@
                                 <td>¥1</td>
                             </tr>
                             <tr>
-                                <td>Mumu</td>
+                                <td><a href="https://github.com/xmagicj">Mumu</a></td>
                                 <td>¥8</td>
                                 <td>jiajia</td>
                                 <td>¥10</td>
                                 <td>简约蚂蚁</td>
                                 <td>¥0.1</td>
+                                <td>好一个王公子</td>
+                                <td>¥2</td>
+                            </tr>
+                            <tr>
+                                <td>hcrgm</td>
+                                <td>¥2.33</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                                 <td></td>
                                 <td></td>
                             </tr>
