--- a/donate.html
+++ b/donate.html
@@ -1382,6 +1382,16 @@
                             <tr>
                                 <td>hcrgm</td>
                                 <td>¥2.33</td>
+                                <td>A杨益铭</td>
+                                <td>¥0.66</td>
+                                <td>Double</td>
+                                <td>¥2.22</td>
+                                <td>颖</td>
+                                <td>¥2</td>
+                            </tr>
+                            <tr>
+                                <td>吕佐鑫</td>
+                                <td>¥8.88</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
