Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1380,7 +1380,7 @@
                                 <td>¥2</td>
                             </tr>
                             <tr>
-                                <td>hcrgm</td>
+                                <td><a href="https://github.com/hcrgm">hcrgm</a></td>
                                 <td>¥2.33</td>
                                 <td>A杨益铭</td>
                                 <td>¥0.66</td>
@@ -1392,12 +1392,12 @@
                             <tr>
                                 <td>吕佐鑫</td>
                                 <td>¥8.88</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Winter</td>
+                                <td>¥10</td>
+                                <td>李彦</td>
+                                <td>¥5</td>
+                                <td>吕雪岩</td>
+                                <td>¥5</td>
                             </tr>
                         </tbody>
                     </table>
