Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1387,7 +1387,7 @@
                                 <td>Double</td>
                                 <td>¥2.22</td>
                                 <td>颖</td>
-                                <td>¥2</td>
+                                <td>¥2+¥2</td>
                             </tr>
                             <tr>
                                 <td>吕佐鑫</td>
@@ -1398,6 +1398,16 @@
                                 <td>¥5</td>
                                 <td>吕雪岩</td>
                                 <td>¥5</td>
+                            </tr>
+                            <tr>
+                                <td>鲍超</td>
+                                <td>¥2</td>
+                                <td>辛者为荣</td>
+                                <td>¥5</td>
+                                <td>张旭</td>
+                                <td>¥20</td>
+                                <td></td>
+                                <td></td>
                             </tr>
                         </tbody>
                     </table>
