Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1406,6 +1406,16 @@
                                 <td>¥5</td>
                                 <td>张旭</td>
                                 <td>¥20</td>
+                                <td>大丁爱文慧</td>
+                                <td>¥6.66</td>
+                            </tr>
+                            <tr>
+                                <td>Melonl</td>
+                                <td>¥20</td>
+                                <td>光军</td>
+                                <td>¥5</td>
+                                <td></td>
+                                <td></td>
                                 <td></td>
                                 <td></td>
                             </tr>
