Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1414,6 +1414,16 @@
                                 <td>¥20</td>
                                 <td>光军</td>
                                 <td>¥5</td>
+                                <td>群峰之巅</td>
+                                <td>¥3</td>
+                                <td>鹏</td>
+                                <td>¥2</td>
+                            </tr>
+                            <tr>
+                                <td>艾晖</td>
+                                <td>¥20</td>
+                                <td></td>
+                                <td></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
