Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1422,8 +1422,8 @@
                             <tr>
                                 <td>艾晖</td>
                                 <td>¥20</td>
-                                <td></td>
-                                <td></td>
+                                <td>Seawolf</td>
+                                <td>¥1</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
