Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1424,8 +1424,18 @@
                                 <td>¥20</td>
                                 <td>Seawolf</td>
                                 <td>¥1</td>
-                                <td></td>
-                                <td></td>
+                                <td>云泪天雨</td>
+                                <td>¥10</td>
+                                <td>珊珊的点滴</td>
+                                <td>¥10</td>
+                            </tr>
+                             <tr>
+                                <td>小七</td>
+                                <td>¥6.66</td>
+                                <td>彐亻</td>
+                                <td>¥10</td>
+                                <td>lang</td>
+                                <td>¥5</td>
                                 <td></td>
                                 <td></td>
                             </tr>
