Modify Bugly Android SDK url

--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
                             </li>
                             <li>
                                 <p>腾讯Bugly 镜像: </p>
-                                <p><code>android-mirror.bugly.qq.com</code> 端口：8080</p>
-                                <p>腾讯镜像使用方法:<a href="http://android-mirror.bugly.qq.com:8080/include/usage.html">http://android-mirror.bugly.qq.com:8080/include/usage.html</a></p>
+                                <p><code>https://dsx.bugly.qq.com/repository/1</code></p>
+                                <p>腾讯镜像使用方法:<a href="https://dsx.bugly.qq.com/repository/1">https://dsx.bugly.qq.com/repository/1</a></p>
                             </li>
                         </ol>
                         <h4><strong>使用方法：</strong></h4>
