Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1440,7 +1440,7 @@
                                 <td>¥10</td>
                             </tr>
                             <tr>
-                                <td>小单</td>
+                                <td><a href="https://github.com/sunflowerseat">小单</a></td>
                                 <td>¥2.66</td>
                                 <td>蜉程</td>
                                 <td>¥1</td>
@@ -1458,6 +1458,16 @@
                                 <td>¥1</td>
                                 <td>huda</td>
                                 <td>¥1</td>
+                            </tr>
+                            <tr>
+                                <td>夏洛克的救赎</td>
+                                <td>¥1.38</td>
+                                <td>晓童</td>
+                                <td>¥6.66</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                             </tr>
                         </tbody>
                     </table>
