--- a/index.html
+++ b/index.html
@@ -247,100 +247,208 @@
                             </tr>
                         </thead>
                         <tbody>
-                                <!-- 2.2 Preview1 -->
-                                <tr>
-                                  <td rowspan="4">2.2 Preview1</td>
-                                    </tr>
-                                <tr>
-                                  <td >Windows</td>
-                                  <td align="left"><a href="http://pan.baidu.com/s/1miwAhyK">android-studio-ide-145.2878421-windows.zip</a></td>
-                                  <td>426.8 MB</td>
-                                  <td>d7d4f1d5c475af7e00c029a73a75ccbf18f7b3d0</td>
-                                  <td rowspan="4"><a href="http://ww1.sinaimg.cn/large/8a41f469gw1f41pqopbbij20sc0lggsw.jpg">查看</a></td>
+                            <!-- 2.2 Preview5 -->
+                            <tr>
+                              <td rowspan="4">2.2 Preview5</td>
                                 </tr>
-                                <tr>
-                                  <td><nobr>Mac OS X</nobr></td>
-                                  <td align="left">
-                                            <a href="http://pan.baidu.com/s/1nuJs1Ot">android-studio-ide-145.2878421-mac.zip</a>
-                                  </td>
-                                  <td>426.9 MB</td>
-                                  <td>6bb5d556d61b455584a708b5e401fae2cb5fdb4f</td>
+                            <tr>
+                              <td >Windows</td>
+                              <td align="left"><a href="http://pan.baidu.com/s/1o7YSkUQ">android-studio-ide-145.3040006-windows.zip</a></td>
+                              <td>448.3 MB</td>
+                              <td><bf541315bfbd35f3ea8337449f3c207cc513b876/td>
+                              <td rowspan="4"><a href="http://ww1.sinaimg.cn/large/006rtfu7gw1f5r0urcoprj30q60f0wkr.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1o7YSkUQ">android-studio-ide-145.3040006-mac.zip</a>
+                              </td>
+                              <td>448.5 MB</td>
+                              <td>5c3ffa8dccbaadc303d0e95df15710e8b50531c0</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1o7YSkUQ">android-studio-ide-145.3040006-linux.zip</a>
+                              </td>
+                              <td>448 MB</td>
+                              <td>ed93014063b272293f9d2ed6783e0173561f5d12</td>
+                            </tr>
+                            <!-- 2.2 Preview4 -->
+                            <tr>
+                              <td rowspan="4">2.2 Preview4</td>
                                 </tr>
-                                <tr>
-                                  <td>Linux</td>
-                                  <td align="left">
-                                            <a href="http://pan.baidu.com/s/1hsLKKEK">android-studio-ide-145.2878421-linux.zip</a>
-                                  </td>
-                                  <td>426.4 MB</td>
-                                  <td>f1320e6adbc7206f07e9df6bed577dbbd4299752</td>
+                            <tr>
+                              <td >Windows</td>
+                              <td align="left"><a href="http://pan.baidu.com/s/1c2kbUuO">android-studio-ide-145.3001415-windows.zip</a></td>
+                              <td>436.8 MB</td>
+                              <td>655b20a12e7d5a05a72bef860653828c06b037a1</td>
+                              <td rowspan="4"><a href="http://ww1.sinaimg.cn/large/006rtfu7gw1f5r0sgf85fj30x10hvdns.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1c2kbUuO">android-studio-ide-145.3001415-mac.zip</a>
+                              </td>
+                              <td>436.9 MB</td>
+                              <td>c269863a426040488ded77b379a5232e5e10ded0</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1c2kbUuO">android-studio-ide-145.3001415-linux.zip</a>
+                              </td>
+                              <td>436.4 MB</td>
+                              <td>b5f38f9489a28ed037f0eacebc44be754f51ba68</td>
+                            </tr>
+                            <!-- 2.2 Preview3 -->
+                            <tr>
+                              <td rowspan="4">2.2 Preview4</td>
                                 </tr>
-                                <!-- 2.1.1 正式版 -->
-                                <tr>
-                                  <td rowspan="6">2.1.1 正式版</td>
-                                    </tr>
-                                <tr>
-                                  <td rowspan="3">Windows</td>
-                                  <td align="left">
-                                        <a href="http://pan.baidu.com/s/1i5O0q9J">android-studio-bundle-143.2821654-windows.exe</a><br>(推荐)
-                                  </td>
-                                  <td>1181 MB</td>
-                                  <td>6f7fcdc30800bd8b3fbd5a14c2b9857243144650</td>
-                                  <td rowspan="6"><a href="http://ww1.sinaimg.cn/large/8a41f469gw1f3wqzmk9nqj20sp0gwwhr.jpg">查看</a></td>
+                            <tr>
+                              <td >Windows</td>
+                              <td align="left"><a href="http://pan.baidu.com/s/1o7V4xhK">android-studio-ide-145.2949926-windows.zip</a></td>
+                              <td>436.8 MB</td>
+                              <td>dc907b35c7ae71d49e3f76122d3d2bf5e5db9273</td>
+                              <td rowspan="4"><a href="http://ww1.sinaimg.cn/large/006rtfu7gw1f5r0ryb161j30qq0gutf9.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1o7V4xhK">android-studio-ide-145.2949926-mac.zip</a>
+                              </td>
+                              <td>436.9 MB</td>
+                              <td>5d0c0680aa3f44cfd9bca59aca5408ac1a194b6b</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1o7V4xhK">android-studio-ide-145.2949926-linux.zip</a>
+                              </td>
+                              <td>436.4 MB</td>
+                              <td>75816cb2e46574fc830f8cd3d8fc75f5441b69e8</td>
+                            </tr>
+                            <!-- 2.2 Preview2 -->
+                            <tr>
+                              <td rowspan="4">2.2 Preview2</td>
                                 </tr>
-                                <tr>
-                                  <td align="left"><a href="http://pan.baidu.com/s/1i5O0q9J">android-studio-ide-143.2821654-windows.exe</a><br>(不含SDK Tools)
-                                  </td>
-                                  <td>270 MB</td>
-                                  <td>d8cb3968814b6155f4effe727baf23b18b9f8360</td>
+                            <tr>
+                              <td >Windows</td>
+                              <td align="left"><a href="http://pan.baidu.com/s/1qYb5YdI">android-studio-ide-145.2915834-windows.zip</a></td>
+                              <td>434 MB</td>
+                              <td>93d2a87193f5391c83862c82ef51064064b3890c</td>
+                              <td rowspan="4"><a href="http://ww1.sinaimg.cn/large/006rtfu7gw1f5r0rhlpqjj30qj0g3q9q.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1qYb5YdI">android-studio-ide-145.2915834-mac.zip</a>
+                              </td>
+                              <td>434 MB</td>
+                              <td>1004f90ce0e0ad0798647b07c3bede74e93ae287</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1qYb5YdI">android-studio-ide-145.2915834-linux.zip</a>
+                              </td>
+                              <td>434 MB</td>
+                              <td>b7f0ab6583f9822a02f578ebe22f59cea99be397</td>
+                            </tr>
+                            <!-- 2.2 Preview1 -->
+                            <tr>
+                              <td rowspan="4">2.2 Preview1</td>
                                 </tr>
-                                <tr>
-                                  <td align="left"><a href="http://pan.baidu.com/s/1i5O0q9J">android-studio-ide-143.2821654-windows.zip</a></td>
-                                  <td>286 MB</td>
-                                  <td>9bec4905e40f0ac16ac7fde63a50f3fbc1eec4d9</td>
+                            <tr>
+                              <td >Windows</td>
+                              <td align="left"><a href="http://pan.baidu.com/s/1miwAhyK">android-studio-ide-145.2878421-windows.zip</a></td>
+                              <td>426.8 MB</td>
+                              <td>d7d4f1d5c475af7e00c029a73a75ccbf18f7b3d0</td>
+                              <td rowspan="4"><a href="http://ww1.sinaimg.cn/large/8a41f469gw1f41pqopbbij20sc0lggsw.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1nuJs1Ot">android-studio-ide-145.2878421-mac.zip</a>
+                              </td>
+                              <td>426.9 MB</td>
+                              <td>6bb5d556d61b455584a708b5e401fae2cb5fdb4f</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1hsLKKEK">android-studio-ide-145.2878421-linux.zip</a>
+                              </td>
+                              <td>426.4 MB</td>
+                              <td>f1320e6adbc7206f07e9df6bed577dbbd4299752</td>
+                            </tr>
+                            <!-- 2.1.1 正式版 -->
+                            <tr>
+                              <td rowspan="6">2.1.1 正式版</td>
                                 </tr>
-                                <tr>
-                                  <td ><nobr>Mac OS X</nobr></td>
-                                  <td align="left">
-                                        <a href="http://pan.baidu.com/s/1mi4Hxfq">android-studio-ide-143.2821654-mac.dmg</a>
-                                  </td>
-                                  <td>284 MB</td>
-                                  <td>4a7ca7532a95c65ee59ed50193c0e976f0272472</td>
+                            <tr>
+                              <td rowspan="3">Windows</td>
+                              <td align="left">
+                                    <a href="http://pan.baidu.com/s/1i5O0q9J">android-studio-bundle-143.2821654-windows.exe</a><br>(推荐)
+                              </td>
+                              <td>1181 MB</td>
+                              <td>6f7fcdc30800bd8b3fbd5a14c2b9857243144650</td>
+                              <td rowspan="6"><a href="http://ww1.sinaimg.cn/large/8a41f469gw1f3wqzmk9nqj20sp0gwwhr.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td align="left"><a href="http://pan.baidu.com/s/1i5O0q9J">android-studio-ide-143.2821654-windows.exe</a><br>(不含SDK Tools)
+                              </td>
+                              <td>270 MB</td>
+                              <td>d8cb3968814b6155f4effe727baf23b18b9f8360</td>
+                            </tr>
+                            <tr>
+                              <td align="left"><a href="http://pan.baidu.com/s/1i5O0q9J">android-studio-ide-143.2821654-windows.zip</a></td>
+                              <td>286 MB</td>
+                              <td>9bec4905e40f0ac16ac7fde63a50f3fbc1eec4d9</td>
+                            </tr>
+                            <tr>
+                              <td ><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                    <a href="http://pan.baidu.com/s/1mi4Hxfq">android-studio-ide-143.2821654-mac.dmg</a>
+                              </td>
+                              <td>284 MB</td>
+                              <td>4a7ca7532a95c65ee59ed50193c0e976f0272472</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1eRUvN3O">android-studio-ide-143.2821654-linux.zip</a>
+                              </td>
+                              <td>284 MB</td>
+                              <td>55d69ad2da0068d818718b26ba43550fbcbeb7e9</td>
+                            </tr>
+                            <!-- 2.1 正式版 -->
+                            <tr>
+                              <td rowspan="4">2.1 正式版</td>
                                 </tr>
-                                <tr>
-                                  <td>Linux</td>
-                                  <td align="left">
-                                            <a href="http://pan.baidu.com/s/1eRUvN3O">android-studio-ide-143.2821654-linux.zip</a>
-                                  </td>
-                                  <td>284 MB</td>
-                                  <td>55d69ad2da0068d818718b26ba43550fbcbeb7e9</td>
-                                </tr>
-                                <!-- 2.1 正式版 -->
-                                <tr>
-                                  <td rowspan="4">2.1 正式版</td>
-                                    </tr>
-                                <tr>
-                                  <td >Windows</td>
-                                  <td align="left"><a href="http://pan.baidu.com/s/1nviuFSP">android-studio-ide-143.2790544-windows.zip</a></td>
-                                  <td>358 MB</td>
-                                  <td>9689ba415e5f09e2dcf5263ea302e7b1d98a8fc6</td>
-                                  <td rowspan="4"><a href="http://ww3.sinaimg.cn/large/8a41f469jw1f3v71k8vdkj20ri0g744u.jpg">查看</a></td>
-                                </tr>
-                                <tr>
-                                  <td><nobr>Mac OS X</nobr></td>
-                                  <td align="left">
-                                            <a href="http://pan.baidu.com/s/1kUKcoWf">android-studio-ide-143.2790544-mac.zip</a>
-                                  </td>
-                                  <td>279.5 MB</td>
-                                  <td>8d28fcf2a3b502d60922b8624bfcfa4990c2fee8</td>
-                                </tr>
-                                <tr>
-                                  <td>Linux</td>
-                                  <td align="left">
-                                            <a href="http://pan.baidu.com/s/1skHil8D">android-studio-ide-143.2790544-linux.zip</a>
-                                  </td>
-                                  <td>278.6 MB</td>
-                                  <td>45dad9b76ad0506c354483aaa67ea0e2468d03a5</td>
-                                </tr>
+                            <tr>
+                              <td >Windows</td>
+                              <td align="left"><a href="http://pan.baidu.com/s/1nviuFSP">android-studio-ide-143.2790544-windows.zip</a></td>
+                              <td>358 MB</td>
+                              <td>9689ba415e5f09e2dcf5263ea302e7b1d98a8fc6</td>
+                              <td rowspan="4"><a href="http://ww3.sinaimg.cn/large/8a41f469jw1f3v71k8vdkj20ri0g744u.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1kUKcoWf">android-studio-ide-143.2790544-mac.zip</a>
+                              </td>
+                              <td>279.5 MB</td>
+                              <td>8d28fcf2a3b502d60922b8624bfcfa4990c2fee8</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1skHil8D">android-studio-ide-143.2790544-linux.zip</a>
+                              </td>
+                              <td>278.6 MB</td>
+                              <td>45dad9b76ad0506c354483aaa67ea0e2468d03a5</td>
+                            </tr>
                             <!-- 2.0 正式版 -->
                             <tr>
                               <td rowspan="6">2.0 正式版</td>
