Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1472,10 +1472,10 @@
                             <tr>
                                 <td>王利</td>
                                 <td>¥1</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>我会反光</td>
+                                <td>¥1</td>
+                                <td>Danny</td>
+                                <td>¥10.24</td>
                                 <td></td>
                                 <td></td>
                             </tr>
